--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1 style="color: #ff6f91;">SELAMAT ULANG TAHUN 💖</h1>
         <h2 style="color: #ff6f91;">"SOFIATUL JANNAH"</h2>
-        <h2 style="color: #ff6f91;">"26-06-2021"</h2>
+
 
 
 
@@ -27,6 +27,7 @@
 
     <section id="beranda">
         <h2 style="color: #d6336c;">Happy Birthday Sayang</h2>
+        <h2 style="color: #ff6f91;">"26-06-2025"</h2>
         <p>"Selamat ulang tahun,untuk sayang ku. Semoga hari ini seindah senyummu dan cintaku selalu jadi hadiah terbaik
             untukmu. Wopyouu!"</p>
         <img src="img/1.jpeg" alt="Foto Berdua" style="margin-top: 20px; border-radius: 15px; width: 200px;" />
@@ -34,11 +35,12 @@
 
     <section id="musik">
         <h2>HBD Sayang 🎶</h2>
+        <button class="btn-audio" onclick="document.getElementById('bgm').play()">🎵 Putar Musik</button>
         <audio id="bgm" autoplay loop>
             <source src="audio/hbd.mp3" type="audio/mpeg">
             Browser kamu tidak mendukung audio.
         </audio>
-        <button onclick="document.getElementById('bgm').play()">Putar Musik</button>
+
 
         <p style="margin-top: 10px;">HAPPY BIRTHDAY SEHAT SELALU PANJANG UMURNYAA ❤️</p>
 
